update LeetCode Weekly Contest 370

--- a/algorithm/LeetCode/[Easy] 1356. Sort Integers by The Number of 1 Bits.md
+++ b/algorithm/LeetCode/[Easy] 1356. Sort Integers by The Number of 1 Bits.md
@@ -59,3 +59,74 @@ class Solution:
     def sortByBits(self, arr: List[int]) -> List[int]:
         return sorted(arr, key=lambda x: (bin(x)[2:].count('1'), x))
 ```
+
+**Solution 2: (Bit Manipulation)**
+```
+Runtime: 23 ms
+Memory: 10.5 MB
+```
+```c++
+class Solution {
+    static int findWeight(int num) {
+        int mask = 1;
+        int weight = 0;
+        
+        while (num > 0) {
+            if ((num & mask) > 0) {
+                weight++;
+                num ^= mask;
+            }
+            
+            mask <<= 1;
+        }
+        
+        return weight;
+    }
+    
+    static bool compare(int a, int b) {
+        if (findWeight(a) == findWeight(b)) {
+            return a < b;
+        }
+        
+        return findWeight(a) < findWeight(b);
+    }
+public:
+    vector<int> sortByBits(vector<int>& arr) {
+        sort(arr.begin(), arr.end(), compare);
+        return arr;     
+    }
+};
+```
+
+**Solution 3: (Brian Kerninghan's Algorithm)**
+```
+Runtime: 4 ms
+Memory: 10.4 MB
+```
+```c++
+class Solution {
+    static int findWeight(int num) {
+        int weight = 0;
+        
+        while (num > 0) {
+            weight++;
+            num &= (num - 1);
+        }
+        
+        return weight;
+    }
+    
+    static bool compare(int a, int b) {
+        if (findWeight(a) == findWeight(b)) {
+            return a < b;
+        }
+        
+        return findWeight(a) < findWeight(b);
+    }
+public:
+    vector<int> sortByBits(vector<int>& arr) {
+        sort(arr.begin(), arr.end(), compare);
+        return arr;     
+    }
+};
+```
