--- a/algorithm/LeetCode/[Easy] 1441. Build an Array With Stack Operationsuntitled.md
+++ b/algorithm/LeetCode/[Easy] 1441. Build an Array With Stack Operationsuntitled.md
@@ -73,3 +73,62 @@ class Solution:
                 
         return list(build())
 ```
+
+**Solution 2: (Greedy)**
+```
+Runtime: 0 ms
+Memory: 8.2 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> buildArray(vector<int>& target, int n) {
+        vector<string> ans;
+        int i = 0;
+        stack<int> stk;
+        for (int cur = 1; cur <= n; cur ++) {
+            if (cur == target[i]) {
+                while (stk.size() && (i == 0 || stk.top() != target[i-1] )) {
+                    stk.pop();
+                    ans.push_back("Pop");
+                }
+                i += 1;
+            }
+            stk.push(cur);
+            ans.push_back("Push");
+            if (i == target.size()) {
+                break;
+            }
+        }
+        return ans;
+    }
+};
+```
+
+**Solution 3: (Greedy)**
+```
+Runtime: 0 ms
+Memory: 8.3 MB
+```
+```c++
+class Solution {
+public:
+    vector<string> buildArray(vector<int>& target, int n) {
+        vector<string> ans;
+        int i = 0;
+        
+        for (int num : target) {
+            while (i < num - 1) {
+                ans.push_back("Push");
+                ans.push_back("Pop");
+                i++;
+            }
+            
+            ans.push_back("Push");
+            i++;
+        }
+        
+        return ans;
+    }
+};
+```
