--- a/algorithm/LeetCode/[Hard] 1259. Handshakes That Don't Cross.md
+++ b/algorithm/LeetCode/[Hard] 1259. Handshakes That Don't Cross.md
@@ -73,3 +73,26 @@ class Solution:
         
         return dfs(num_people) % MOD
 ```
+
+**Solution 2: (DP Bottom-Up)**
+```
+Runtime: 24 ms
+Memory: 6.9 MB
+```
+```c++
+class Solution {
+public:
+    int numberOfWays(int numPeople) {
+        vector<long long> dp(1+numPeople);
+        int MOD = 1e9 + 7;
+        dp[0] = 1;
+        for (int k = 2; k <= numPeople; k += 2) {
+            for (int i = 0; i < k-1; i += 2) {
+                dp[k] += dp[i]*dp[k-i-2];
+                dp[k] %= MOD;
+            }
+        }
+        return dp[numPeople];
+    }
+};
+```
