update LeetCode Biweekly Contest 117

--- a/algorithm/LeetCode/[Hard] 2642. Design Graph With Shortest Path Calculator.md
+++ b/algorithm/LeetCode/[Hard] 2642. Design Graph With Shortest Path Calculator.md
@@ -77,48 +77,94 @@ class Graph:
 # param_2 = obj.shortestPath(node1,node2)
 ```
 
-**Solution 2: (Dijkstra)**
+**Solution 2: (Dijkstra's Algorithm)**
 ```
-Runtime: 204 ms
-Memory: 86.3 MB
+Runtime: 158 ms
+Memory: 78.4 MB
 ```
 ```c++
 class Graph {
-    typedef long long ll;
-    vector<vector<pair<int, int>>> G;
     int n;
+    vector<vector<pair<int, int>>> g;
 public:
     Graph(int n, vector<vector<int>>& edges) {
-        this -> n = n;
-        G.resize(n);
-        for(auto& e : edges) G[e[0]].push_back({e[1], e[2]});
+        this->n = n;
+        g.resize(n);
+        for (auto edge: edges) {
+            g[edge[0]].push_back({edge[1], edge[2]});
+        }
     }
     
     void addEdge(vector<int> edge) {
-        G[edge[0]].push_back({edge[1], edge[2]});
+        g[edge[0]].push_back({edge[1], edge[2]});
     }
     
     int shortestPath(int node1, int node2) {
-        // Dijktra's algo
-        priority_queue<pair<ll, int>, vector<pair<ll, int>>, greater<pair<ll, int>>> pq;
-        pq.push({0, node1});
-        
+        priority_queue<pair<int,int>, vector<pair<int,int>>, greater<pair<int,int>>> pq;
         vector<int> dist(n, INT_MAX);
+        pq.push({0, node1});
         dist[node1] = 0;
-        
-        while(!pq.empty()) {
-            auto [d, u] = pq.top(); pq.pop();
-            if(u == node2) return d;
-            if(dist[u] < d) continue;
-            for(auto [v, wt] : G[u]) {
-               if(dist[v] > dist[u] + wt) {
-                    pq.push({d + wt, v});
-                    dist[v] = d + wt;
-               }
-            } 
+        while (pq.size()) {
+            auto [w, u] = pq.top();
+            pq.pop();
+            if (u == node2) {
+                return w;
+            }
+            for (auto [v, dw]: g[u]) {
+                if (w + dw < dist[v]) {
+                    pq.push({w + dw, v});
+                    dist[v] = w + dw;
+                }
+            }
         }
-        
         return -1;
+    }
+};
+
+/**
+ * Your Graph object will be instantiated and called as such:
+ * Graph* obj = new Graph(n, edges);
+ * obj->addEdge(edge);
+ * int param_2 = obj->shortestPath(node1,node2);
+ */
+```
+
+**Solution 3: (Floyd–Warshall algorithm)**
+```
+Runtime: 531 ms
+Memory: 61.7 MB
+```
+```c++
+class Graph {
+    vector<vector<int>> adjMatrix;
+public:
+    Graph(int n, vector<vector<int>>& edges) {
+        adjMatrix = vector<vector<int>>(n, vector<int>(n, 1e9));
+        for (auto &e : edges)
+            adjMatrix[e[0]][e[1]] = e[2];
+        for (int i = 0; i < n; ++i)
+            adjMatrix[i][i] = 0;
+        for (int i = 0; i < n; i++)
+            for (int j = 0; j < n; j++)
+                for (int k = 0; k < n; k++)
+                    adjMatrix[j][k] = min(adjMatrix[j][k],
+                                           adjMatrix[j][i] + adjMatrix[i][k]);
+    }
+    
+    void addEdge(vector<int> edge) {
+        int n = adjMatrix.size();
+        for (int i = 0; i < n; i++)
+            for (int j = 0; j < n; j++)
+                adjMatrix[i][j] = min(adjMatrix[i][j], 
+                                       adjMatrix[i][edge[0]] +
+                                       adjMatrix[edge[1]][j] +
+                                       edge[2]);
+    }
+    
+    int shortestPath(int node1, int node2) {
+        if (adjMatrix[node1][node2] == 1e9) 
+            return -1;
+        return adjMatrix[node1][node2];
     }
 };
 
