--- a/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
+++ b/algorithm/LeetCode/[Hard] 1028. Recover a Tree From Preorder Traversal.md
@@ -169,3 +169,93 @@ public:
     }
 };
 ```
+
+**Solution 3: (Stack, Greedy)**
+```
+Runtime: 18 ms
+Memory: 19.9 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* recoverFromPreorder(string traversal) {
+        vector<TreeNode*> stk;
+        int d = 0;
+        TreeNode *node;
+        string cur;
+        for (int i = 0; i < traversal.size(); i ++) {
+            if (traversal[i] == '-') {
+                d += 1;
+                continue;
+            }
+            cur += traversal[i];
+            if (i == traversal.size()-1 || i+1 < traversal.size() && traversal[i+1] == '-') {
+                node = new TreeNode(stoi(cur));
+                while (stk.size() > d) {
+                    stk.pop_back();
+                }
+                stk.push_back(node);
+                if (stk.size() >= 2) {
+                    if (!stk[d-1]->left) {
+                        stk[d-1]->left = node;
+                    } else {
+                        stk[d-1]->right = node;
+                    }
+                }
+                cur = "";
+                d = 0;
+            }
+        }
+        return stk[0];
+    }
+};
+```
+
+**Solution 4: (Stack)**
+```
+Runtime: 13 ms
+Memory: 20 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    TreeNode* recoverFromPreorder(string traversal) {
+        vector<TreeNode*> stack;
+        for (int i = 0, level, val; i < traversal.length();) {
+            for (level = 0; traversal[i] == '-'; i++)
+                level++;
+            for (val = 0; i < traversal.length() && traversal[i] != '-'; i++)
+                val = val * 10 + traversal[i] - '0';
+            TreeNode* node = new TreeNode(val);
+            while (stack.size() > level) stack.pop_back();
+            if (!stack.empty())
+                if (!stack.back()->left) stack.back()->left = node;
+                else stack.back()->right = node;
+            stack.push_back(node);
+        }
+        return stack[0];
+    }
+};
+```
