update LeetCode Biweekly Contest 118

--- a/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
+++ b/algorithm/LeetCode/[Hard[ 1944. Number of Visible People in a Queue.md
@@ -38,7 +38,7 @@ Output: [4,1,1,1,0]
 
 # Submissions
 ---
-**Solution 1: (Stack, Monotonic increasing stack)**
+**Solution 1: (Stack, Monotonic decreasing stack)**
 ```
 Runtime: 1156 ms
 Memory Usage: 29.9 MB
@@ -56,4 +56,29 @@ class Solution:
                 ans[i] += 1
             stk.append(h)
         return ans[:: -1]
+```
+
+**Solution 2: (Stack, Monotonic decreasing stack)**
+```
+Runtime: 131 ms
+Memory: 84.4 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> canSeePersonsCount(vector<int>& heights) {
+        int n = heights.size();
+        stack<int> stk;
+        vector<int> ans(n);
+        for (int i = n-1; i >= 0; i --) {
+            while (stk.size() && stk.top() < heights[i]) {
+                stk.pop();
+                ans[i] += 1;
+            }
+            ans[i] += stk.size() ? 1 : 0;
+            stk.push(heights[i]);
+        }
+        return ans;
+    }
+};
 ```
