--- a/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
+++ b/algorithm/LeetCode/[Hard] 2398. Maximum Number of Robots Within Budget.md
@@ -56,7 +56,7 @@ class Solution:
         return n - i
 ```
 
-**Solution 2: (Sliding Window)**
+**Solution 2: (Sliding Window, sorted set)**
 ```
 Runtime: 863 ms
 Memory Usage: 149.1 MB
