update LeetCode Weekly Contest 374

--- a/algorithm/LeetCode/[Easy] 1160. Find Words That Can Be Formed by Characters.md
+++ b/algorithm/LeetCode/[Easy] 1160. Find Words That Can Be Formed by Characters.md
@@ -74,3 +74,36 @@ class Solution:
                 total+=len(word)
         return total
 ```
+
+**Solution 3: (Hash Table)**
+```
+Runtime: 28 ms
+Memory: 15.5 MB
+```
+```c++
+class Solution {
+public:
+    int countCharacters(vector<string>& words, string chars) {
+        char m[26] = {0};
+        for (int i = 0; i < chars.size(); i ++) {
+            m[chars[i]-'a'] += 1;
+        }
+        char cur[26];
+        int ans = 0, j;
+        for (int i = 0; i < words.size(); i ++) {
+            memset(cur, 0, sizeof(cur));
+            j = 0;
+            for (; j < words[i].size(); j ++) {
+                cur[words[i][j]-'a'] += 1;
+                if (cur[words[i][j]-'a'] > m[words[i][j]-'a']) {
+                    break;
+                }
+            }
+            if (j == words[i].size()) {
+                ans += words[i].size();
+            }
+        }
+        return ans;
+    }
+};
+```
