--- a/algorithm/LeetCode/[Hard] 1611. Minimum One Bit Operations to Make Integers Zero.md
+++ b/algorithm/LeetCode/[Hard] 1611. Minimum One Bit Operations to Make Integers Zero.md
@@ -111,3 +111,75 @@ class Solution:
             self.dp[n] = self.minimumOneBitOperations((b >> 1) ^ b ^ n) + 1 + b - 1
         return self.dp[n]
 ```
+
+**Solution 2: (Math and Recursion)**
+```
+Runtime: 0 ms
+Memory: 6.2 MB
+```
+```c++
+class Solution {
+public:
+    int minimumOneBitOperations(int n) {
+        if (n == 0) {
+            return 0;
+        }
+        
+        int k = 0;
+        int curr = 1;
+        while (curr * 2 <= n) {
+            curr *= 2;
+            k++;
+        }
+        
+        return (1 << (k + 1)) - 1 - minimumOneBitOperations(n ^ curr);
+    }
+};
+```
+
+**Solution 3: (Iteration)**
+```
+Runtime: 0 ms
+Memory: 6.4 MB
+```
+```c++
+class Solution {
+public:
+    int minimumOneBitOperations(int n) {
+        int ans = 0;
+        int k = 0;
+        int mask = 1;
+        
+        while (mask <= n) {
+            if ((n & mask) != 0) {
+                ans = (1 << (k + 1)) - 1 - ans;
+            }
+            
+            mask <<= 1;
+            k++;
+        }
+        
+        return ans;
+    }
+};
+```
+
+**Solution 4: (Gray Code)**
+```
+Runtime: 0 ms
+Memory: 6.3 MB
+```
+```c++
+class Solution {
+public:
+    int minimumOneBitOperations(int n) {
+        int ans = n;
+        ans ^= ans >> 16;
+        ans ^= ans >> 8;
+        ans ^= ans >> 4;
+        ans ^= ans >> 2;
+        ans ^= ans >> 1;
+        return ans;
+    }
+};
+```
