--- a/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
+++ b/algorithm/LeetCode/[Hard] 1235. Maximum Profit in Job Scheduling.md
@@ -87,3 +87,29 @@ class Solution:
                 dp.append([e, dp[i][1] + p])
         return dp[-1][1]
 ```
+
+**Solution 2: (DP Bottom-Up, Binary Search, Sort)**
+```
+Runtime: 222 ms
+Memory: 82.5 MB
+```
+```c++
+class Solution {
+public:
+    int jobScheduling(vector<int>& startTime, vector<int>& endTime, vector<int>& profit) {
+        int n = startTime.size();
+        vector<vector<int>> jobs;
+        for (int i = 0; i < n; ++i) {
+            jobs.push_back({endTime[i], startTime[i], profit[i]});
+        }
+        sort(jobs.begin(), jobs.end());
+        map<int, int> dp = {{0, 0}};
+        for (auto& job : jobs) {
+            int cur = prev(dp.upper_bound(job[1]))->second + job[2];
+            if (cur > dp.rbegin()->second)
+                dp[job[0]] = cur;
+        }
+        return dp.rbegin()->second;
+    }
+};
+```
