update LeetCode Biweekly Contest 119

--- a/algorithm/LeetCode/[Easy] 1903. Largest Odd Number in String.md
+++ b/algorithm/LeetCode/[Easy] 1903. Largest Odd Number in String.md
@@ -59,3 +59,22 @@ class Solution:
         # Or return the string upto that index.
         return(num[:last_ind])
 ```
+
+**Solution 2: (String)**
+```
+Runtime: 27 ms
+Memory: 15.2 MB
+```
+```c++
+class Solution {
+public:
+    string largestOddNumber(string num) {
+        for (int i = num.size()-1; i >= 0; i --) {
+            if ((num[i]-'0')%2) {
+                return num.substr(0, i+1);
+            }
+        }
+        return "";
+    }
+};
+```
