--- a/algorithm/LeetCode/[Easy] 1688. Count of Matches in Tournament.md
+++ b/algorithm/LeetCode/[Easy] 1688. Count of Matches in Tournament.md
@@ -38,6 +38,25 @@ Total number of matches = 7 + 3 + 2 + 1 = 13.
 
 # Submissions
 ---
+**Solution 1: (Simulate)**
+```
+Runtime: 0 ms
+Memory: 6.3 MB
+```
+```c++
+class Solution {
+public:
+    int numberOfMatches(int n) {
+        int ans = 0;
+        while (n > 1) {
+            ans += n/2;
+            n = n/2 + n%2;
+        }
+        return ans;
+    }
+};
+```
+
 **Solution 1: (Math)**
 ```
 Runtime: 32 ms
