--- a/algorithm/LeetCode/[Easy] 1716. Calculate Money in Leetcode Bank.md
+++ b/algorithm/LeetCode/[Easy] 1716. Calculate Money in Leetcode Bank.md
@@ -47,3 +47,28 @@ class Solution:
                 (weeks-1) * 7 * weeks // 2 +        # (0+7+14+28+..) adding 7 for weeks - 1 starting from the second one
                 (2*weeks + days + 1) * days // 2)   # last week sum:  (weeks + 1) + .... + (weeks + 1) + (days - 1)
 ```
+
+**Solution 2: (Simulate)**
+```
+Runtime: 0 ms
+Memory: 6.3 MB
+```
+```c++
+class Solution {
+public:
+    int totalMoney(int n) {
+        int k = n / 7;
+        int F = 28;
+        int L = 28 + (k - 1) * 7;
+        int arithmeticSum = k * (F + L) / 2;
+        
+        int monday = 1 + k;
+        int finalWeek = 0;
+        for (int day = 0; day < n % 7; day++) {
+            finalWeek += monday + day;
+        }
+        
+        return arithmeticSum + finalWeek;
+    }
+};
+```
