update LeetCode Weekly Contest 376

--- a/algorithm/LeetCode/[Easy] 1287. Element Appearing More Than 25% In Sorted Array.md
+++ b/algorithm/LeetCode/[Easy] 1287. Element Appearing More Than 25% In Sorted Array.md
@@ -29,3 +29,50 @@ class Solution:
     def findSpecialInteger(self, arr: List[int]) -> int:
         return collections.Counter(arr).most_common()[0][0]
 ```
+
+**Solution 2: (Check the Element N/4 Ahead)**
+```
+Runtime: 13 ms
+Memory: 12.7 MB
+```
+```c++
+class Solution {
+public:
+    int findSpecialInteger(vector<int>& arr) {
+        int size = arr.size() / 4;
+        for (int i = 0; i < arr.size() - size; i++) {
+            if (arr[i] == arr[i + size]) {
+                return arr[i];
+            }
+        }
+        
+        return -1;
+    }
+};
+```
+
+**Solution 3: (Binary Search)**
+```
+Runtime: 12 ms
+Memory: 12.8 MB
+```
+```c++
+class Solution {
+public:
+    int findSpecialInteger(vector<int>& arr) {
+        int n = arr.size();
+        vector<int> candidates = {arr[n / 4], arr[n / 2], arr[3 * n / 4]};
+        int target = n / 4;
+        
+        for (int candidate : candidates) {
+            int left = lower_bound(arr.begin(), arr.end(), candidate) - arr.begin();
+            int right = upper_bound(arr.begin(), arr.end(), candidate) - arr.begin();
+            if (right - left > target) {
+                return candidate;
+            }
+        }
+        
+        return -1;
+    }
+};
+```
