--- a/algorithm/LeetCode/[Easy] 1436. Destination City.md
+++ b/algorithm/LeetCode/[Easy] 1436. Destination City.md
@@ -70,3 +70,27 @@ class Solution:
             else:
                 q.append(g[st])
 ```
+
+**Solution 3: (Hash Table)**
+```
+Runtime: 16 ms
+Memory: 11.9 MB
+```
+```c++
+class Solution {
+public:
+    string destCity(vector<vector<string>>& paths) {
+        unordered_map<string, int> dp;
+        for (auto path: paths) {
+            dp[path[0]] -= 1;
+            dp[path[1]] += 1;
+        }
+        for (auto [a, c]: dp) {
+            if (c == 1) {
+                return a;
+            }
+        }
+        return "";
+    }
+};
+```
