--- a/algorithm/LeetCode/[Easy] 1582. Special Positions in a Binary Matrix.md
+++ b/algorithm/LeetCode/[Easy] 1582. Special Positions in a Binary Matrix.md
@@ -74,3 +74,32 @@ class Solution:
                     cnt += 1
         return cnt
 ```
+
+**Solution 2: (Array)**
+```
+Runtime: 7 ms
+Memory: 13.3 MB
+```
+```c++
+class Solution {
+public:
+    int numSpecial(vector<vector<int>>& mat) {
+        int m = mat.size(), n = mat[0].size(), ans = 0;
+        vector<int> dp(m+n);
+        for (int i = 0; i < m; i ++) {
+            for (int j = 0; j < n; j ++) {
+                dp[i] += mat[i][j];
+                dp[m+j] += mat[i][j];
+            }
+        }
+        for (int i = 0; i < m; i ++) {
+            for (int j = 0; j < n; j ++) {
+                if (mat[i][j] && dp[i] == 1 && dp[m+j] == 1) {
+                    ans += 1;
+                }
+            }
+        }
+        return ans;
+    }
+};
+```
