--- a/algorithm/LeetCode/[Hard] 1776. Car Fleet II.md
+++ b/algorithm/LeetCode/[Hard] 1776. Car Fleet II.md
@@ -62,3 +62,34 @@ class Solution:
         result.reverse()
         return result
 ```
+
+**Solution 2: (Stack)**
+```
+Runtime: 426 ms
+Memory: 129 MB
+```
+```c++
+class Solution {
+public:
+    vector<double> getCollisionTimes(vector<vector<int>>& cars) {
+        int n = cars.size();
+        vector<int> stack;
+        vector<double> res(n, -1);
+        for (int i = n - 1; i >= 0; --i) {
+            int p = cars[i][0], s = cars[i][1];
+            while (!stack.empty()) {
+                int j = stack.back(), p2 = cars[j][0], s2 = cars[j][1];
+                if (s <= s2 || 1.0 * (p2 - p) / (s - s2) >= res[j] && res[j] > 0)
+                    stack.pop_back();
+                else
+                    break;
+            }
+            if (!stack.empty())
+                res[i] = 1.0 * (cars[stack.back()][0] - p) / (s - cars[stack.back()][1]);
+            stack.push_back(i);
+        }
+        return res;
+
+    }
+};
+```
