update LeetCode solution - algorithm

--- a/algorithm/LeetCode/[Easy] 1913. Maximum Product Difference Between Two Pairs.md
+++ b/algorithm/LeetCode/[Easy] 1913. Maximum Product Difference Between Two Pairs.md
@@ -44,3 +44,38 @@ class Solution:
         nums.sort()
         return nums[-1] * nums[-2] - nums[0] * nums[1]
 ```
+
+**Solution 2: (Track the Two Biggest and the Two Smallest Elements)**
+```
+Runtime: 21 ms
+Memory: 20.8 MB
+```
+```c++
+class Solution {
+public:
+    int maxProductDifference(vector<int>& nums) {
+        int biggest = 0;
+        int secondBiggest = 0;
+        int smallest = INT_MAX;
+        int secondSmallest = INT_MAX;
+        
+        for (int num : nums) {
+            if (num > biggest) {
+                secondBiggest = biggest;
+                biggest = num;
+            } else {
+                secondBiggest = max(secondBiggest, num);
+            }
+            
+            if (num < smallest) {
+                secondSmallest = smallest;
+                smallest = num;
+            } else {
+                secondSmallest = min(secondSmallest, num);
+            }
+        }
+        
+        return biggest * secondBiggest - smallest * secondSmallest;
+    }
+};
+```
