update LeetCode Biweekly Contest 120

--- a/algorithm/LeetCode/[Easy] 1758. Minimum Changes To Make Alternating Binary String.md
+++ b/algorithm/LeetCode/[Easy] 1758. Minimum Changes To Make Alternating Binary String.md
@@ -47,3 +47,22 @@ class Solution:
         res = sum(i % 2 == int(c) for i, c in enumerate(s))
         return min(res, len(s) - res)
 ```
+
+**Solution 1: (Greedy, Math)**
+```
+Runtime: 3 ms
+Memory: 7.5 MB
+```
+```c++
+class Solution {
+public:
+    int minOperations(string s) {
+        int cur = 0, ans = 0;
+        for (auto c: s) {
+            ans += (c-'0') ^ cur;
+            cur ^= 1;
+        }
+        return min(ans, (int)s.size() - ans);
+    }
+};
+```
