--- a/algorithm/LeetCode/[Easy] 1422. Maximum Score After Splitting a String.md
+++ b/algorithm/LeetCode/[Easy] 1422. Maximum Score After Splitting a String.md
@@ -49,3 +49,35 @@ class Solution:
     def maxScore(self, s: str) -> int:
         return max([s[:i].count('0') + s[i:].count('1') for i in range(1, len(s))])
 ```
+
+**Solution 2: (One Pass)**
+```
+Runtime: 0 ms
+Memory: 6.5 MB
+```
+```c++
+class Solution {
+public:
+    int maxScore(string s) {
+        int ones = 0;
+        int zeros = 0;
+        int best = INT_MIN;
+
+        for (int i = 0; i < s.size() - 1; i++) {
+            if (s[i] == '1') {
+                ones++;
+            } else {
+                zeros++;
+            }
+            
+            best = max(best, zeros - ones);
+        }
+        
+        if (s[s.size() - 1] == '1') {
+            ones++;
+        }
+        
+        return best + ones;
+    }
+};
+```
