--- a/algorithm/LeetCode/[Easy] 1496. Path Crossing.md
+++ b/algorithm/LeetCode/[Easy] 1496. Path Crossing.md
@@ -61,24 +61,39 @@ class Solution:
 **Solution 2: (Set)**
 ```
 Runtime: 4 ms
-Memory Usage: 6.7 MB
+Memory: 7.2 MB
 ```
 ```c++
 class Solution {
 public:
     bool isPathCrossing(string path) {
-        int x = 0,y=0;
-        set<pair<int,int>>s;
-        s.insert({0,0});
-        for(char p: path){
-            if(p == 'N') y++;
-            else if(p == 'S')y--;
-            else if(p == 'E') x++;
-            else x--;
+        unordered_map<char, pair<int, int>> moves;
+        moves['N'] = {0, 1};
+        moves['S'] = {0, -1};
+        moves['W'] = {-1, 0};
+        moves['E'] = {1, 0};
+        
+        unordered_set<string> visited;
+        visited.insert("0,0");
+        
+        int x = 0;
+        int y = 0;
+        
+        for (char c : path) {
+            pair<int, int> curr = moves[c];
+            int dx = curr.first;
+            int dy = curr.second;
+            x += dx;
+            y += dy;
             
-            if(s.find({x,y}) != s.end()) return true;
-            else s.insert({x,y});
+            string hash = to_string(x) + "," + to_string(y);
+            if (visited.find(hash) != visited.end()) {
+                return true;
+            }
+            
+            visited.insert(hash);
         }
+        
         return false;
     }
 };
