update LeetCode Weekly Contest 378

--- a/algorithm/LeetCode/[Hard] 1639. Number of Ways to Form a Target String Given a Dictionary.md
+++ b/algorithm/LeetCode/[Hard] 1639. Number of Ways to Form a Target String Given a Dictionary.md
@@ -94,7 +94,7 @@ class Solution:
 
 **Solution 2: (DP Bottom-Up with Counter)**
 
-**Explanation**
+__Explanation__
 
 res[j] means the number of ways to form target j first characters.
 
@@ -122,4 +122,66 @@ class Solution:
             for j in range(n - 1, -1, -1):
                 res[j + 1] += res[j] * count[target[j]] % mod
         return res[n] % mod
+```
+
+**Solution 3: (DP Top-Down)**
+```
+Runtime: 567 ms
+Memory: 39.2 MB
+```
+```c++
+class Solution {
+    int dp[1001][1001];
+    long long M = 1e9 + 7;
+    vector<map<int, int> > chIdx;
+    long long dfs(string &t, int i, int j) {
+        if(i >= chIdx.size()) return j == t.size();
+        if(j == t.size()) return 1;
+        if(dp[i][j] >= 0) return dp[i][j];
+        long long res = 0;
+        if(chIdx[i][t[j]])
+            res = dfs(t, i + 1, j + 1) * chIdx[i][t[j]];
+        res += dfs(t, i + 1, j);
+        res %= M;
+        return dp[i][j] = res;
+    }
+public:
+    int numWays(vector<string>& words, string target) {
+        memset(dp, -1, sizeof(dp));
+        chIdx.resize((words[0].size()));
+        for(auto &word : words) {
+            for(int i = 0; i < word.size(); ++i) {
+                ++chIdx[i][word[i]];
+            }
+        }
+        return dfs(target, 0, 0);
+    }
+};
+```
+
+**Solution 4: (DP Bottom-Up)**
+```
+Runtime: 226 ms
+Memory: 54.3 MB
+```
+```c++
+class Solution {
+public:
+    int numWays(vector<string>& words, string target) {
+        long mod = 1e9+7, M = words.size(), L = words[0].size(), N = target.size();
+        if (L < N) return 0;
+        vector<array<long, 26>> cnt(L, array<long, 26>());
+        for (int i = 0; i < L; ++i) {
+            for (int j = 0; j < M; ++j) cnt[i][words[j][i] - 'a']++;
+        }
+        vector<vector<int>> dp(L + 1, vector<int>(N + 1));
+        for (int i = 0; i < L; ++i) {
+            dp[i][0] = 1;
+            for (int j = 0; j <= i && j < N; ++j) {
+                dp[i + 1][j + 1] = ((cnt[i][target[j] - 'a'] * dp[i][j]) % mod + dp[i][j + 1]) % mod;
+            }
+        }
+        return dp[L][N];
+    }
+};
 ```
