--- a/algorithm/LeetCode/[Easy] 1624. Largest Substring Between Two Equal Characters.md
+++ b/algorithm/LeetCode/[Easy] 1624. Largest Substring Between Two Equal Characters.md
@@ -54,3 +54,27 @@ class Solution:
             maxLen = max(maxLen, i - indices.setdefault(c, i) - 1)
         return maxLen
 ```
+
+**Solution 2: (Hash Table)**
+```
+Runtime: 3 ms
+Memory: 6.6 MB
+```
+```c++
+class Solution {
+public:
+    int maxLengthBetweenEqualCharacters(string s) {
+        int dp[26];
+        memset(dp, -1, sizeof(dp));
+        int ans = -1;
+        for (int i = 0; i < s.size(); i ++) {
+            if (dp[s[i] - 'a'] == -1) {
+                dp[s[i] - 'a'] = i;
+            } else {
+                ans = max(ans, i - dp[s[i] - 'a'] - 1);
+            }
+        }
+        return ans;
+    }
+};
+```
