--- a/algorithm/LeetCode/[Easy] 1897. Redistribute Characters to Make All Strings Equal.md
+++ b/algorithm/LeetCode/[Easy] 1897. Redistribute Characters to Make All Strings Equal.md
@@ -43,3 +43,29 @@ class Solution:
         counts, n = collections.Counter(''.join(words)), len(words)                    
         return all([ val % n == 0 for val in counts.values() ]
 ```
+
+**Solution 2: (Counter)**
+```
+Runtime: 10 ms
+Memory: 11.9 MB
+```
+```c++
+class Solution {
+public:
+    bool makeEqual(vector<string>& words) {
+        int n = words.size();
+        int cnt[26] = {0};
+        for (auto &word: words) {
+            for (auto &c: word) {
+                cnt[c-'a'] += 1;
+            }
+        }
+        for (int i = 0; i < 26; i ++) {
+            if (cnt[i] % n) {
+                return false;
+            }
+        }
+        return true;
+    }
+};
+```
