--- a/algorithm/LeetCode/[Hard] 1335. Minimum Difficulty of a Job Schedule.md
+++ b/algorithm/LeetCode/[Hard] 1335. Minimum Difficulty of a Job Schedule.md
@@ -120,27 +120,29 @@ class Solution:
 
 **Solution 3: (DP Bottom-Up)**
 ```
-Runtime: 106 ms
-Memory: 8 MB
+Runtime: 78 ms
+Memory: 8.2 MB
 ```
 ```c++
 class Solution {
 public:
     int minDifficulty(vector<int>& jobDifficulty, int d) {
-        if(jobDifficulty.size()<d) return -1;
-		int n=jobDifficulty.size();
-		vector<vector<int>> dp(n+1,vector<int>(d+1,INT_MAX/2));
-		dp[0][0]=0;
-		for(int i=1;i<=n;i++){
-			for(int k=1;k<=d;k++){
-				int temp=0;
-				for(int j=i-1;j>=k-1;j--){
-					temp=max(temp,jobDifficulty[j]);
-					dp[i][k]=min(dp[i][k],dp[j][k-1]+temp);
-				}
-			}
-		}
-		return dp[n][d];
+        int n = jobDifficulty.size();
+        if (n < d) {
+            return -1;
+        }
+        vector<vector<int>> dp(n+1, vector<int>(d+1, INT_MAX/2));
+        dp[0][0] = 0;
+        for (int i = 1; i <= n; i ++) {
+            for (int k = 1; k <= d; k ++) {
+                int cur = 0;
+                for (int j = i-1; j >= k-1; j --) {
+                    cur = max(cur, jobDifficulty[j]);
+                    dp[i][k] = min(dp[i][k], dp[j][k-1] + cur);
+                }
+            }
+        }
+        return dp[n][d];
     }
 };
 ```
