--- a/algorithm/LeetCode/[Hard] 1531. String Compression II.md
+++ b/algorithm/LeetCode/[Hard] 1531. String Compression II.md
@@ -72,6 +72,26 @@ Memory Usage: 24.5 MB
 ```c++
 int f[105][105][30][15];
 class Solution {
+    string s;
+    int dfs(int idx, int k, int last, int concat) {
+        if (k < 0) return 9999999;
+        if (idx == s.size()) return 0;
+        
+        int& val = f[idx][k][last][concat];
+        if (val != -1) return val;
+        
+        int answer = 9999999;
+        // delete
+        answer = min(answer, dfs(idx + 1, k - 1, last, concat));
+        // concat
+        if (last == s[idx] - 'a') {
+            const int fac = (concat == 1 || concat == 9) ? 1 : 0;
+            answer = min(answer, fac + dfs(idx + 1, k, last, min(10, concat + 1)));
+        } else {
+            answer = min(answer, 1 + dfs(idx + 1, k, s[idx] - 'a', 1));
+        }
+        return val = answer;
+    }
 public:
     int getLengthOfOptimalCompression(string s, int k) {
         this->s = s;
@@ -102,27 +122,6 @@ public:
         }
         
         return dfs(0, k, 26, 0);
-    }
-private:
-    string s;
-    int dfs(int idx, int k, int last, int concat) {
-        if (k < 0) return 9999999;
-        if (idx == s.size()) return 0;
-        
-        int& val = f[idx][k][last][concat];
-        if (val != -1) return val;
-        
-        int answer = 9999999;
-        // delete
-        answer = min(answer, dfs(idx + 1, k - 1, last, concat));
-        // concat
-        if (last == s[idx] - 'a') {
-            const int fac = (concat == 1 || concat == 9) ? 1 : 0;
-            answer = min(answer, fac + dfs(idx + 1, k, last, min(10, concat + 1)));
-        } else {
-            answer = min(answer, 1 + dfs(idx + 1, k, s[idx] - 'a', 1));
-        }
-        return val = answer;
     }
 };
 ```
@@ -176,64 +175,42 @@ public:
 };
 ```
 
-**Solution 4: (DP Top-Down)**
+**Solution 4: (DP Bottom-Up)**
 ```
-Runtime: 567 ms
-Memory: 39.2 MB
+Runtime: 141 ms
+Memory: 16.2 MB
 ```
 ```c++
 class Solution {
-    int dp[1001][1001];
-    long long M = 1e9 + 7;
-    vector<map<int, int> > chIdx;
-    long long dfs(string &t, int i, int j) {
-        if(i >= chIdx.size()) return j == t.size();
-        if(j == t.size()) return 1;
-        if(dp[i][j] >= 0) return dp[i][j];
-        long long res = 0;
-        if(chIdx[i][t[j]])
-            res = dfs(t, i + 1, j + 1) * chIdx[i][t[j]];
-        res += dfs(t, i + 1, j);
-        res %= M;
-        return dp[i][j] = res;
-    }
 public:
-    int numWays(vector<string>& words, string target) {
-        memset(dp, -1, sizeof(dp));
-        chIdx.resize((words[0].size()));
-        for(auto &word : words) {
-            for(int i = 0; i < word.size(); ++i) {
-                ++chIdx[i][word[i]];
-            }
-        }
-        return dfs(target, 0, 0);
-    }
-};
-```
+    int getLengthOfOptimalCompression(string s, int k) {
+        int n = s.length();
+        vector<vector<int>> dp(110, vector<int>(110, 9999)); // Initializing a 2D vector 'dp' of size 110x110 with value 9999
+        dp[0][0] = 0; // Initializing the base case where no characters and deletions exist
 
-**Solution 5: (DP Bottom-Up)**
-```
-Runtime: 226 ms
-Memory: 54.3 MB
-```
-```c++
-class Solution {
-public:
-    int numWays(vector<string>& words, string target) {
-        long mod = 1e9+7, M = words.size(), L = words[0].size(), N = target.size();
-        if (L < N) return 0;
-        vector<array<long, 26>> cnt(L, array<long, 26>());
-        for (int i = 0; i < L; ++i) {
-            for (int j = 0; j < M; ++j) cnt[i][words[j][i] - 'a']++;
-        }
-        vector<vector<int>> dp(L + 1, vector<int>(N + 1));
-        for (int i = 0; i < L; ++i) {
-            dp[i][0] = 1;
-            for (int j = 0; j <= i && j < N; ++j) {
-                dp[i + 1][j + 1] = ((cnt[i][target[j] - 'a'] * dp[i][j]) % mod + dp[i][j + 1]) % mod;
+        for (int i = 1; i <= n; i++) {
+            for (int j = 0; j <= k; j++) {
+                int cnt = 0, del = 0;
+                for (int l = i; l >= 1; l--) {
+                    // Count the frequency of characters from 'i' to 'l'
+                    if (s[l - 1] == s[i - 1]) 
+                        cnt++;
+                    else 
+                        del++;
+                    
+                    // Check if the remaining allowed deletions are valid (j - del >= 0)
+                    if (j - del >= 0) {
+                        // Update the dp array based on the conditions
+                        dp[i][j] = min(dp[i][j],
+                            dp[l - 1][j - del] + 1 + (cnt >= 100 ? 3 : cnt >= 10 ? 2 : cnt >= 2 ? 1 : 0));
+                    }
+                }
+                
+                // If there are remaining allowed deletions (j > 0), consider the case without deleting current character
+                if (j > 0)
+                    dp[i][j] = min(dp[i][j], dp[i - 1][j - 1]);
             }
         }
-        return dp[L][N];
+        return dp[n][k]; // Return the minimum length for 's' with at most 'k' deletions
     }
-};
-```
+};```
