update LeetCode Weekly Contest 380

--- a/algorithm/LeetCode/[Easy] 1704. Determine if String Halves Are Alike.md
+++ b/algorithm/LeetCode/[Easy] 1704. Determine if String Halves Are Alike.md
@@ -55,3 +55,22 @@ class Solution:
         b = s.lower()[len(s)//2:]
         return collections.Counter(c in 'aeiou' for c in a) == collections.Counter(c in 'aeiou' for c in b)
 ```
+
+**Solution 2: (String)**
+```
+Runtime: 0 ms
+Memory: 7.16 MB
+```
+```c++
+class Solution {
+public:
+    bool halvesAreAlike(string s) {
+        unordered_set<char> vow={'a','e','i','o','u','A','E','I','O','U'};
+        int n=s.size()/2, f = 0;
+        for (int i = 0; i < n; i ++){
+            f += (vow.count(s[i])-vow.count(s[n+i]));
+        }
+        return f == 0;
+    }
+};
+```
