update LeetCode Biweekly Contest 122

--- a/algorithm/LeetCode/[Easy] 1170. Compare Strings by Frequency of the Smallest Character.md
+++ b/algorithm/LeetCode/[Easy] 1170. Compare Strings by Frequency of the Smallest Character.md
@@ -46,3 +46,41 @@ class Solution:
         return res
             
 ```
+
+**Solution 2: (Array, Binary Search)**
+```
+Runtime: 27 ms
+Memory: 17.89 MB
+```
+```c++
+class Solution {
+    int f(string word)
+    {
+        unordered_map<char,int> m;
+        sort(begin(word),end(word));
+        for(auto it: word)
+        {
+            m[it]++;
+        }
+        return m[word[0]];
+    }
+public:
+    vector<int> numSmallerByFrequency(vector<string>& queries, vector<string>& words) {
+        vector<int> ans(queries.size(),0);
+        vector<int> res(words.size());
+        for(int i=0;i<words.size();i++)
+        {
+            res[i] = f(words[i]);
+        }
+        sort(res.begin(),res.end());
+        for(int i=0;i<queries.size();i++)
+        {
+            int x = f(queries[i]);
+            int y = upper_bound(res.begin(),res.end(),x) - res.begin();
+            ans[i] = res.size()-y;
+            
+        }
+        return ans;
+    }
+};
+```
