--- a/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
+++ b/algorithm/LeetCode/[Easy] 1207. Unique Number of Occurrences.md
@@ -30,7 +30,7 @@ Output: true
 
 # Submissions
 ---
-**Solution**
+**Solution 1: (Counter)**
 ```
 Runtime: 82 ms
 Memory: 14 MB
@@ -39,4 +39,29 @@ Memory: 14 MB
 class Solution:
     def uniqueOccurrences(self, arr: List[int]) -> bool:
         return len(c := Counter(arr)) == len(set(c.values()))
+```
+
+**Solution 2: (Counter)**
+```
+Runtime: 0 ms
+Memory: 8.64 MB
+```
+```c++
+class Solution {
+public:
+    bool uniqueOccurrences(vector<int>& arr) {
+        unordered_map<int, int> m;
+        for (int a: arr) {
+            m[a] += 1;
+        }
+        unordered_set<int> st;
+        for (auto [_, c]: m) {
+            if (st.count(c)) {
+                return false;
+            }
+            st.insert(c);
+        }
+        return true;
+    }
+};
 ```
