update LeetCode Weekly Contest 382

--- a/algorithm/LeetCode/[Hard] 1906. Minimum Absolute Difference Queries.md
+++ b/algorithm/LeetCode/[Hard] 1906. Minimum Absolute Difference Queries.md
@@ -69,3 +69,59 @@ class Solution:
         
         return ans
 ```
+
+**Solution 2: (Prefix sum)**
+```
+Runtime: 300 ms
+Memory: 129.00 MB
+```
+```c++
+class Solution {
+    int cnt[100001][101] = {};
+public:
+    vector<int> minDifference(vector<int>& nums, vector<vector<int>>& queries) {
+        vector<int> res;
+        for (int i = 0; i < nums.size(); ++i)
+            for (int j = 1; j <= 100; ++j)
+                cnt[i + 1][j] = cnt[i][j] + (nums[i] == j);
+        for (int i = 0; i < queries.size(); ++i) {
+            int prev = 0, delta = INT_MAX;
+            for (int j = 1; j <= 100; ++j)
+                if (cnt[queries[i][1] + 1][j] - cnt[queries[i][0]][j]) {
+                    delta = min(delta, prev == 0 ? INT_MAX : j - prev);
+                    prev = j;
+                }
+            res.push_back(delta == INT_MAX ? -1 : delta);
+        }
+        return res;
+    }
+};
+```
+
+**Solution 2: (Binary Search)**
+```
+Runtime: 359 ms
+Memory: 91.03 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> minDifference(vector<int>& nums, vector<vector<int>>& queries) {
+        vector<int> res, idx[101];
+        for (int i = 0; i < nums.size(); ++i)
+            idx[nums[i]].push_back(i);
+        for (int i = 0; i < queries.size(); ++i) {
+            int prev = 0, delta = INT_MAX;
+            for (int j = 1; j <= 100; ++j) {
+                auto it = lower_bound(begin(idx[j]), end(idx[j]), queries[i][0]);
+                if (it != end(idx[j]) && *it <= queries[i][1]) {
+                    delta = min(delta, prev == 0 ? INT_MAX : j - prev);
+                    prev = j;
+                }
+            }
+            res.push_back(delta == INT_MAX ? -1 : delta);
+        }
+        return res;
+    }
+};
+```
