--- a/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
+++ b/algorithm/LeetCode/[Hard] 1074. Number of Submatrices That Sum to Target.md
@@ -107,38 +107,41 @@ class Solution:
         return count
 ```
 
-**Solution 3: (Hash Table, Prefix Sum)**
+**Solution 3: (Hash Table, Prefix Sum on each pair of column)**
+
+1. Find the prefix sum for each row.
+1. For each pair of column find the subarrays sum eqaul to target.
+
 ```
-Runtime: 606 ms
-Memory Usage: 95.5 MB
+Runtime: 361 ms
+Memory: 99.10 MB
 ```
 ```c++
 class Solution {
 public:
     int numSubmatrixSumTarget(vector<vector<int>>& matrix, int target) {
-        int rows = matrix.size() , cols = matrix[0].size();
-        
-        if(rows < 1){
+        int m = matrix.size(), n = matrix[0].size();
+        if (m < 1){
             return 0;
         }
-        
+
         // calculate prefix sum for rows
-        for(int row = 0 ; row < rows ; row++){
-            for(int col = 1 ; col < cols ;col++){
+        for (int row = 0; row < m; row++){
+            for (int col = 1 ; col < n; col++){
                 matrix[row][col] =  matrix[row][col] + matrix[row][col -1];
             }
         }
       
-        int count = 0 , sum ;
+        int count = 0, sum;
         unordered_map<int , int> counter;
-        for(int colstart = 0 ; colstart < cols ;colstart++){
-            for(int col = colstart ; col < cols; col++){
+        for (int colstart = 0; colstart < n; colstart++){
+            for (int col = colstart; col < n; col++){
                 counter.clear();
                 counter[0] = 1;
-                sum =0;
-                for(int row = 0 ; row < rows ;row++){
+                sum = 0;
+                for (int row = 0 ; row < m; row++){
                     sum += matrix[row][col] - (colstart > 0 ? matrix[row][colstart - 1] : 0 );
-                    count += (counter.find(sum- target) != counter.end() ? counter[sum-target] : 0);
+                    count += (counter.count(sum - target) ? counter[sum - target] : 0);
                     counter[sum]++;
                 }
             }
