--- a/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
+++ b/algorithm/LeetCode/[Hard] 1463. Cherry Pickup II.md
@@ -190,3 +190,41 @@ public:
     }
 };
 ```
+
+**Solution 5: (DP Bottom-Up)**
+```
+Runtime: 32 ms
+Memory: 19.45 MB
+```
+```c++
+class Solution {
+public:
+    int cherryPickup(vector<vector<int>>& grid) {
+        int rows = grid.size(), cols = grid[0].size();
+        vector<vector<vector<int>>> dp(rows, vector<vector<int>>(cols, vector<int>(cols)));
+        for (int i = rows-1; i >= 0; i --) {
+            for (int j1 = 0; j1 < cols; j1++) {
+                // for (int j2 = j1+1; j2 < cols; j2++) {
+                for (int j2 = j1; j2 < cols; j2++) {
+                    dp[i][j1][j2] = grid[i][j1];
+                    if (j1 != j2) {
+                        dp[i][j1][j2] += grid[i][j2];
+                    }
+                    if (i < rows-1) {
+                        int pre = 0;
+                        for (int pj1: {j1-1, j1, j1+1}) {
+                            for (int pj2: {j2-1, j2, j2+1}) {
+                                if (0 <= pj1 && pj1 < cols && 0 <= pj2 && pj2 < cols) {
+                                    pre = max(pre, dp[i+1][pj1][pj2]);
+                                }
+                            }
+                        }
+                        dp[i][j1][j2] += pre;
+                    }
+                }
+            }
+        }
+        return dp[0][0][cols-1];
+    }
+};
+```
