update LeetCode Weekly Contest 385

--- a/algorithm/LeetCode/[Hard] 3041. Maximize Consecutive Elements in an Array After Modification.md
+++ b/algorithm/LeetCode/[Hard] 3041. Maximize Consecutive Elements in an Array After Modification.md
@@ -32,7 +32,10 @@ Explanation: The maximum consecutive elements that we can select is 1.
 
 # Submissions
 ---
-**Solution 1: (Sort, Greedy)**
+**Solution 1: (Sort, DP)**
+
+Try to increase the element to find the consecutive elements first
+
 ```
 Runtime: 640 ms
 Memory: 38.42 MB
@@ -51,4 +54,36 @@ class Solution:
             ans = max(ans, value)
             
         return ans
+```
+
+**Solution 2: (Sort, DP)**
+
+Sort input A first.
+
+dp[a] is the maximum length of consecutive sequence ending with a.
+
+Iterates through each a in the sorted A.
+We can use a as a + 1, so we update dp[a + 1] = dp[a] + 1
+We can use a as a itself, so we update dp[a] = dp[a - 1] + 1
+
+Finally we return the max length in dp values.
+
+```
+Runtime: 315 ms
+Memory: 137.56 MB
+```
+```c++
+class Solution {
+public:
+    int maxSelectedElements(vector<int>& nums) {
+        unordered_map<int, int> dp;
+        sort(nums.begin(), nums.end());
+        int res = 0;
+        for (int& a : nums) {
+            res = max(res, dp[a + 1] = dp[a] + 1);
+            res = max(res, dp[a] = dp[a - 1] + 1);
+        }
+        return res;
+    }
+};
 ```
