update LeetCode Weekly Contest 386

--- a/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
+++ b/algorithm/LeetCode/[Hard] 2092. Find All People With Secret.md
@@ -122,3 +122,47 @@ class Solution:
                         stack.append(y)
         return can
 ```
+
+**Solution 3: (BFS by group)**
+```
+Runtime:945 ms
+Memory: 451.03 MB
+```
+```c++
+class Solution {
+public:
+    vector<int> findAllPeople(int n, vector<vector<int>>& meetings, int firstPerson) {
+        map<int, vector<pair<int,int>>> grp;
+        for (int i = 0; i < meetings.size(); i ++) {
+            grp[meetings[i][2]].push_back({meetings[i][0], meetings[i][1]});
+        }
+        unordered_set<int> ans({0, firstPerson});
+        for (auto [_, v]: grp) {
+            unordered_map<int, unordered_set<int>> g;
+            unordered_set<int> cur;
+            for (auto [x, y]: v) {
+                g[x].insert(y);
+                g[y].insert(x);
+                if (ans.count(x)) {
+                    cur.insert(x);
+                }
+                if (ans.count(y)) {
+                    cur.insert(y);
+                }
+            }
+            deque<int> q(cur.begin(), cur.end());
+            while (q.size()) {
+                auto v = q.front();
+                q.pop_front();
+                for (auto nv: g[v]) {
+                    if (!ans.count(nv)) {
+                        ans.insert(nv);
+                        q.push_back(nv); 
+                    }
+                }
+            }
+        }
+        return vector<int>(ans.begin(), ans.end());
+    }
+};
+```
