update LeetCode Biweekly Contest 125

--- a/algorithm/LeetCode/[Easy] 2864. Maximum Odd Binary Number.md
+++ b/algorithm/LeetCode/[Easy] 2864. Maximum Odd Binary Number.md
@@ -42,3 +42,18 @@ class Solution:
     def maximumOddBinaryNumber(self, s: str) -> str:
         return '1' * (s.count('1') - 1 if s.count('1') != 1 else 0) + '0' * (s.count('0')) + '1'
 ```
+
+**Solution 2: (String)**
+```
+Runtime: 4 ms
+Memory: 9.35 MB
+```
+```c++
+class Solution {
+public:
+    string maximumOddBinaryNumber(string s) {
+        int one = count(s.begin(), s.end(), '1');
+        return string(one-1, '1') + string(s.size()-one, '0') + string(1, '1');
+    }
+};
+```
