update LeetCode Weekly Contest 390

--- a/algorithm/LeetCode/[Hard] 2772. Apply Operations to Make All Array Elements Equal to Zero.md
+++ b/algorithm/LeetCode/[Hard] 2772. Apply Operations to Make All Array Elements Equal to Zero.md
@@ -35,7 +35,7 @@ Explanation: It is not possible to make all the array elements equal to 0.
 
 # Submissions
 ---
-**Solution 1: (Sliding Window)**
+**Solution 1: (Sliding Window, prefix sum)**
 ```
 Runtime: 180 ms
 Memory: 93.9 MB
