--- a/algorithm/LeetCode/[Hard] 2906. Construct Product Matrix.md
+++ b/algorithm/LeetCode/[Hard] 2906. Construct Product Matrix.md
@@ -38,7 +38,7 @@ So the answer is [[2],[0],[0]].
 
 # Submissions
 ---
-**Solution 1: (Greedy, prefix and suffix)**
+**Solution 1: (prefix and suffix)**
 ```
 Runtime: 197 ms
 Memory: 127.1 MB
@@ -59,6 +59,44 @@ public:
             }
         }
         return A;
+    }
+};
+```
+
+**Solution 1: (prefix and suffix)**
+```
+Runtime: 196 ms
+Memory: 164.97 MB
+```
+```c++
+class Solution {
+public:
+    vector<vector<int>> constructProductMatrix(vector<vector<int>>& grid) {
+        int n=grid.size();
+        int m=grid[0].size();
+        vector<vector<int>> left(n,vector<int>(m,1));
+        vector<vector<int>> right(n,vector<int>(m,1));
+        int prev=1;
+        for(int i=0;i<n;i++){
+            for(int j=0;j<m;j++){
+                left[i][j]=prev;
+                prev=(((prev)%12345)*((grid[i][j])%12345))%12345;
+            }
+        }
+        int last=1;
+        for(int i=n-1;i>=0;i--){
+            for(int j=m-1;j>=0;j--){
+                right[i][j]=last;
+                last=(((last)%12345)*((grid[i][j])%12345))%12345;
+            }
+        }
+        vector<vector<int>> result(n,vector<int>(m,1));
+        for(int i=0;i<n;i++){
+            for(int j=0;j<m;j++){
+                result[i][j]=(left[i][j]*right[i][j])%12345;
+            }
+        }
+        return result;
     }
 };
 ```
