update LeetCode Biweekly Contest 127

--- a/algorithm/LeetCode/[Hard] 2444. Count Subarrays With Fixed Bounds.md
+++ b/algorithm/LeetCode/[Hard] 2444. Count Subarrays With Fixed Bounds.md
@@ -54,21 +54,29 @@ class Solution:
 
 **Solution 2: (Sliding Window)**
 ```
-Runtime: 344 ms
-Memory: 70.4 MB
+Runtime: 85 ms
+Memory: 82.68 MB
 ```
 ```c++
 class Solution {
 public:
     long long countSubarrays(vector<int>& nums, int minK, int maxK) {
-        long res = 0, jbad = -1, jmin = -1, jmax = -1, n = nums.size();
-        for (int i = 0; i < n; ++i) {
-            if (nums[i] < minK || nums[i] > maxK) jbad = i;
-            if (nums[i] == minK) jmin = i;
-            if (nums[i] == maxK) jmax = i;
-            res += max(0L, min(jmin, jmax) - jbad);
+        long long ans = 0;
+        int i = 0, imin = -1, imax = -1;
+        for (int j = 0; j < nums.size(); j ++) {
+            if (nums[j] < minK || nums[j] > maxK) {
+                i = j+1;
+                continue;
+            }
+            if (nums[j] == minK) {
+                imin = j;
+            }
+            if (nums[j] == maxK) {
+                imax = j;
+            }
+            ans += max(0, min(imin, imax) - i + 1);
         }
-        return res;
+        return ans;
     }
 };
 ```
