--- a/algorithm/LeetCode/[Easy] 1042. Flower Planting With No Adjacent.md
+++ b/algorithm/LeetCode/[Easy] 1042. Flower Planting With No Adjacent.md
@@ -39,7 +39,7 @@ Output: [1,2,3,4]
 
 # Submissions
 ---
-**Solution 1: (Graph)**
+**Solution 1: (Graph, Brute Force)**
 ```
 Runtime: 460 ms
 Memory Usage: 19.3 MB
