--- a/algorithm/LeetCode/[Easy] 1544. Make The String Great.md
+++ b/algorithm/LeetCode/[Easy] 1544. Make The String Great.md
@@ -59,29 +59,24 @@ class Solution:
         return "".join(stack)
 ```
 
-**Solution 2: (Stack)**
+**Solution 2: (String)**
 ```
-Runtime: 4 ms
-Memory Usage: 6.7 MB
+Runtime: 0 ms
+Memory: 7.57 MB
 ```
 ```c++
 class Solution {
 public:
     string makeGood(string s) {
-        stack<char> st;
-        for (int i = 0;i<s.size();i++){
-            st.push(s[i]);
-            while (!st.empty() && ((st.top()==s[i+1]+32) || (st.top()==s[i+1]-32))){
-                st.pop();
-                i++;
+        string ans;
+        for (int i = 0; i < s.size(); i ++) {
+            if (ans != "" && (ans.back() ^ s[i]) == 32) {
+                ans.pop_back();
+            } else {
+                ans += s[i];
             }
         }
-        string ret = "";
-        while(!st.empty()){
-            ret = st.top() + ret;
-            st.pop();
-        }
-        return ret;
+        return ans;
     }
 };
 ```
