update LeetCode Biweekly Contest 128

--- a/algorithm/LeetCode/[Easy] 1700. Number of Students Unable to Eat Lunch.md
+++ b/algorithm/LeetCode/[Easy] 1700. Number of Students Unable to Eat Lunch.md
@@ -59,3 +59,54 @@ class Solution:
             k += 1
         return n - k
 ```
+
+**Solution 2: (Simulation, Queue)**
+```
+Runtime: 5 ms
+Memory: 10.79 MB
+```
+```c++
+class Solution {
+public:
+    int countStudents(vector<int>& students, vector<int>& sandwiches) {
+        int n = students.size(), count = 0, i = 0;
+        queue<int> q;
+        for (int i = 0; i < n; i ++){
+           q.push(students[i]);
+        }
+        while (q.size() > 0 && count != q.size()) {
+            if (q.front() == sandwiches[i]) {
+                q.pop();
+                i ++;
+                count = 0;
+            } else {
+                q.push(q.front());
+                q.pop();
+                count++;
+            }
+        }
+        return q.size();
+    }
+};
+```
+
+**Solution 3: (Counter)**
+```
+Runtime: 0 ms
+Memory: 10.78 MB
+```
+```c++
+class Solution {
+public:
+    int countStudents(vector<int>& students, vector<int>& sandwiches) {
+        int n = students.size(), cnt[2], i = 0;
+        cnt[1] = count(students.begin(), students.end(), 1);
+        cnt[0] = n - cnt[1];
+        while (i < n && cnt[sandwiches[i]]) {
+            cnt[sandwiches[i]] -= 1;
+            i += 1;
+        }
+        return n - i;
+    }
+};
+```
