--- a/algorithm/LeetCode/[Easy] 2073. Time Needed to Buy Tickets.md
+++ b/algorithm/LeetCode/[Easy] 2073. Time Needed to Buy Tickets.md
@@ -80,3 +80,25 @@ public:
     }
 };
 ```
+
+**Solution 3: (Greedy)**
+```
+Runtime: 2 ms
+Memory: 9.50 MB
+```
+```c++
+class Solution {
+public:
+    int timeRequiredToBuy(vector<int>& tickets, int k) {
+        int ans = 0;
+        for (int i = 0; i < tickets.size(); i ++) {
+            if (i <= k) {
+                ans += min(tickets[i], tickets[k]);
+            } else {
+                ans += min(tickets[i], tickets[k]-1);
+            }
+        }
+        return ans;
+    }
+};
+```
