--- a/algorithm/LeetCode/[Easy] 1971. Find if Path Exists in Graph.md
+++ b/algorithm/LeetCode/[Easy] 1971. Find if Path Exists in Graph.md
@@ -192,3 +192,35 @@ class Solution:
 
         return dfs(source)
 ```
+
+**Solution 2: (Union Find)**
+```
+Runtime: 274 ms
+Memory: 121.22 MB
+```
+```c++
+class Solution {
+    vector<int> p;
+    int find(int v) {
+        if (v != p[v]) {
+            p[v] = find(p[v]);
+        }
+        return p[v];
+    }
+    void uni(int u, int v) {
+        int pu = find(u), pv = find(v);
+        p[pu] = pv;
+    }
+public:
+    bool validPath(int n, vector<vector<int>>& edges, int source, int destination) {
+        p.resize(n);
+        for (int i = 0; i < n; i ++) {
+            p[i] = i;
+        }
+        for (int i = 0; i < edges.size(); i ++) {
+            uni(edges[i][0], edges[i][1]);
+        }
+        return find(source) == find(destination);
+    }
+};
+```
