--- a/algorithm/LeetCode/[Easy] 2373. Largest Local Values in a Matrix.md
+++ b/algorithm/LeetCode/[Easy] 2373. Largest Local Values in a Matrix.md
@@ -59,21 +59,25 @@ class Solution:
 
 **Solution 2: (Array)**
 ```
-Runtime: 32 ms
-Memory Usage: 11.1 MB
+Runtime: 9 ms
+Memory: 13.45 MB
 ```
 ```c++
 class Solution {
 public:
     vector<vector<int>> largestLocal(vector<vector<int>>& grid) {
         int n = grid.size();
-        vector<vector<int>> res(n - 2, vector<int>(n - 2));
-        for (int i = 0; i < n - 2; ++i)
-            for (int j = 0; j < n - 2; ++j)
-                for (int ii = i; ii < i + 3; ++ii)
-                    for (int jj = j; jj < j + 3; ++jj)
-                        res[i][j] = max(res[i][j], grid[ii][jj]);
-        return res;
+        vector<vector<int>> ans(n-2, vector<int>(n-2));
+        for (int i = 1; i < n-1; i ++) {
+            for (int j = 1; j < n-1; j ++) {
+                for (int ci = i-1; ci <= i+1; ci++) {
+                    for (int cj = j-1; cj <= j+1; cj++) {
+                        ans[i-1][j-1] = max(ans[i-1][j-1], grid[ci][cj]);
+                    }
+                }
+            }
+        }
+        return ans;
     }
 };
 ```
