update LeetCode Weekly Contest 398

--- a/algorithm/LeetCode/[Easy] 2331. Evaluate Boolean Binary Tree.md
+++ b/algorithm/LeetCode/[Easy] 2331. Evaluate Boolean Binary Tree.md
@@ -69,10 +69,10 @@ class Solution:
             return self.evaluateTree(root.left) and self.evaluateTree(root.right)
 ```
 
-**Solution 2: (DFS)**
+**Solution 3: (Iterative approach (Depth First Search))**
 ```
-Runtime: 20 ms
-Memory Usage: 15.1 MB
+Runtime: 17 ms
+Memory: 21.61 MB
 ```
 ```c++
 /**
@@ -89,10 +89,75 @@ Memory Usage: 15.1 MB
 class Solution {
 public:
     bool evaluateTree(TreeNode* root) {
-        if (!root->left and !root->right)   return root->val;
-        int l = evaluateTree(root->left);
-        int r = evaluateTree(root->right);
-        return (root->val == 2) ? l or r : l and r;
+        stack<TreeNode*> st;
+        st.push(root);
+        unordered_map<TreeNode*, bool> evaluated;
+
+        while (!st.empty()) {
+            TreeNode* topNode = st.top();
+
+            // If the node is a leaf node, store its value in the evaluated
+            // hashmap and continue
+            if (!topNode->left and !topNode->right) {
+                st.pop();
+                evaluated[topNode] = topNode->val;
+                continue;
+            }
+
+            // If both the children have already been evaluated, use their
+            // values to evaluate the current node.
+            if (evaluated.find(topNode->left) != evaluated.end() and
+                evaluated.find(topNode->right) != evaluated.end()) {
+                st.pop();
+                if (topNode->val == 2) {
+                    evaluated[topNode] =
+                        evaluated[topNode->left] || evaluated[topNode->right];
+                } else {
+                    evaluated[topNode] =
+                        evaluated[topNode->left] && evaluated[topNode->right];
+                }
+            } else {
+                // If both the children are not leaf nodes, push the current
+                // node along with its left and right child back into the stack.
+                st.push(topNode->right);
+                st.push(topNode->left);
+            }
+        }
+
+        return evaluated[root] == 1;
+    }
+};
+```
+
+**Solution 3: (DFS)**
+```
+Runtime: 12 ms
+Memory: 17.31 MB
+```
+```c++
+/**
+ * Definition for a binary tree node.
+ * struct TreeNode {
+ *     int val;
+ *     TreeNode *left;
+ *     TreeNode *right;
+ *     TreeNode() : val(0), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x) : val(x), left(nullptr), right(nullptr) {}
+ *     TreeNode(int x, TreeNode *left, TreeNode *right) : val(x), left(left), right(right) {}
+ * };
+ */
+class Solution {
+public:
+    bool evaluateTree(TreeNode* root) {
+        if (!root->left && !root->right) {
+            return root->val;
+        }
+        bool left = evaluateTree(root->left);
+        bool right = evaluateTree(root->right);
+        if (root->val == 2) {
+            return left || right;
+        }
+        return left && right;
     }
 };
 ```
