--- a/algorithm/LeetCode/[Hard] 3068. Find the Maximum Sum of Node Values.md
+++ b/algorithm/LeetCode/[Hard] 3068. Find the Maximum Sum of Node Values.md
@@ -57,7 +57,73 @@ Explanation: The maximum achievable sum is 42 which can be achieved by Bogdan pe
 
 # Submissions
 ---
-**Solution 1: (Greedy)**
+**Solution 1: (Top-Down Dynamic Programming - Memoization, take and not-taken)**
+```
+Runtime: 241 ms
+Memory: 145.36 MB
+```
+```c++
+class Solution {
+    long long maxSumOfNodes(int index, int isEven, vector<int>& nums, int k,
+                            vector<vector<long long>>& memo) {
+        if (index == nums.size()) {
+            // If the operation is performed on an odd number of elements return
+            // INT_MIN
+            return isEven == 1 ? 0 : INT_MIN;
+        }
+        if (memo[index][isEven] != -1) {
+            return memo[index][isEven];
+        }
+        // No operation performed on the element
+        long long noXorDone =
+            nums[index] + maxSumOfNodes(index + 1, isEven, nums, k, memo);
+        // XOR operation is performed on the element
+        long long xorDone = (nums[index] ^ k) +
+                            maxSumOfNodes(index + 1, isEven ^ 1, nums, k, memo);
+
+        // Memoize and return the result
+        return memo[index][isEven] = max(xorDone, noXorDone);
+    }
+public:
+    long long maximumValueSum(vector<int>& nums, int k, vector<vector<int>>& edges) {
+        vector<vector<long long>> memo(nums.size(), vector<long long>(2, -1));
+        return maxSumOfNodes(0, 1, nums, k, memo);
+    }
+};
+```
+
+**Solution 2: (Bottom-up Dynamic Programming (Tabulation))**
+```
+Runtime: 223 ms
+Memory: 143.28 MB
+```
+```c++
+class Solution {
+public:
+    long long maximumValueSum(vector<int>& nums, int k, vector<vector<int>>& edges) {
+        int n = nums.size();
+        vector<vector<long long>> dp(n + 1, vector<long long>(2, 0));
+        dp[n][1] = 0;
+        dp[n][0] = INT_MIN;
+        
+        for (int index = n - 1; index >= 0; index--) {
+            for (int isEven = 0; isEven <= 1; isEven++) {
+                // Case 1: we perform the operation on this element.
+                long long performOperation =
+                    dp[index + 1][isEven ^ 1] + (nums[index] ^ k);
+                // Case 2: we don't perform operation on this element.
+                long long dontPerformOperation =
+                    dp[index + 1][isEven] + nums[index];
+
+                dp[index][isEven] = max(performOperation, dontPerformOperation);
+            }
+        }
+        return dp[0][1];
+    }
+};
+```
+
+**Solution 3: (Greedy)**
 
 In a tree, we can freely change any even number of nodes.
 
